LevelGen work + Sokoban3 level parsing

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gvgai"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cma-es-read-only"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/FastVGDL"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
